# nonstop-kino

./: .gitignore  Makefile  README.md  __init__.py  movie_showings.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  sql_app.db
alembic/: env.py
core/: __init__.py  fetch.py  main.py  models.py  movie_showings.py
static/scss/: _cards.scss  _page.scss  _typography.scss  _variables.scss  main.scss
templates/: template.html  todays_movies.html
