[tool.poetry]
name = "nonstop-kino"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "nonstop_kino"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.11"
requests = "^2.29.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.95.1"
beautifulsoup4 = "^4.12.2"
pytz = "^2023.3"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
